Router Posts, Sections, Tags

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.f3ac3208bfae26ae3036.hot-update.js": "/0.f3ac3208bfae26ae3036.hot-update.js",
+    "/0.1819a4eaa7a4081bcaa1.hot-update.js": "/0.1819a4eaa7a4081bcaa1.hot-update.js",
+    "/0.3a73708e22517652e1cc.hot-update.js": "/0.3a73708e22517652e1cc.hot-update.js",
+    "/0.48e9fae1da81efa2e279.hot-update.js": "/0.48e9fae1da81efa2e279.hot-update.js",
+    "/0.d801746c60d7e6f70655.hot-update.js": "/0.d801746c60d7e6f70655.hot-update.js",
+    "/0.9f964e22a13fb1adbcad.hot-update.js": "/0.9f964e22a13fb1adbcad.hot-update.js"
 }
